<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/my_lights_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/common_signin_button_text"
        android:textSize="56sp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:labelFor="@id/input_email"
        android:text="@string/email"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_lights_title" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="Email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        tools:text="username@example.com"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:labelFor="@id/input_password"
        android:text="@string/password"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintTop_toBottomOf="@id/password_label"
        tools:text="sidufhsidufh93"
        tools:targetApi="o" />

    <Button
        android:id="@+id/sign_in_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/common_signin_button_text"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toTopOf="@id/button_create_account" />

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintBottom_toTopOf="@id/button_forgot_password" />

    <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>